M       cg_vbm_batch.sh
M       cg_vbm_write.m
M       distribute_to_server.sh
M       templates_1.50mm/vbm12.nii
A       vbm_io_3Dto4D.m
M       vbm_io_colormaps.m
M       vbm_io_cprintf.m
M       vbm_io_remat.m
M       vbm_plot_boxplot.m
A       vbm_qa_calcSTC.m
M       vbm_stat_marks.m
M       vbm_surf_createCS.m
M       vbm_tst_calc_kappa.m
M       vbm_tst_pre.m
M       vbm_tst_t1qa.m
M       vbm_vol_atlas.m
M       vbm_vol_average.m
A       vbm_vol_ctype.m
M       vbm_vol_iscale.m
M       vbm_vol_localstat.c
M       vbm_vol_localstat.mexmaci64
M       vbm_vol_partvol.m

(1)  Force a stronger separation of new preprocessing routings from the well 
     known stable routines by the "vbm.extopts.LAS" parameter, with 0 for the 
     conservative pipeline (VBM12), and 1 for the version with new segmentation
     routines like B3C, LAS, WMHC, BVC, etc (VBM12i).
(2)  Corrected an error in vbm_vol_localstat, but this function still requires
     a major update for nan, inf, and zero behavior!
(3)  Updates for distributed processing of other MATLAB/SPM/VBM function in 
     "cg_vbm_batch.sh" (and "distribute_to_server.sh"). 
(4)  Updated QA routines.
(5)  Set cut regions as NaN for cortical thickness map! 
     This may lead to smoothing problems!

------------------------------------------------------------------------
r577 | dahnke | 2014-03-06 11:14:03

M       CHANGES.txt
M       cg_set_com.m
M       vbm_vol_localstat.mexa64
M       vbm_vol_localstat.mexglx
M       vbm_vol_localstat.mexw32
M       vbm_vol_localstat.mexw64

(1) Changed reference origin in cg_set_com.m for z-axis.
(2) Recompiled vbm_vol_localstat.c for all systems.
------------------------------------------------------------------------
r578 | gaser | 2014-03-06 13:00:11

M       CHANGES.txt
M       vbm12.man
M       vbm_vol_ctype.m

vbm_vol_ctype.m can now work with datatypes such uint8-le.
------------------------------------------------------------------------
r579 | gaser | 2014-03-10 09:45:37